apps/pocketid/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocketid
  namespace: pocketid
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "pocketid.kyledev.co"
  rules:
    - backendRefs:
        - name: pocketid
          port: 80
