apps/pocketid/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pocketid-public
  namespace: pocketid
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-buffers: "4 32k"
    nginx.ingress.kubernetes.io/proxy-busy-buffers-size: "64k"
spec:
  ingressClassName: nginx
  rules:
    - host: pocketid.kyledev.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pocketid
                port:
                  name: http
