apps/pocketid/manifest.yaml
---
# Source: homelab/charts/pocketid/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocketid
  labels:
    helm.sh/chart: pocketid-0.1.30
    app.kubernetes.io/name: pocketid
    app.kubernetes.io/instance: pocketid
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 1411
      targetPort: 1411
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: pocketid
    app.kubernetes.io/instance: pocketid
---
# Source: homelab/charts/pocketid/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocketid
  labels:
    helm.sh/chart: pocketid-0.1.30
    app.kubernetes.io/name: pocketid
    app.kubernetes.io/instance: pocketid
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: pocketid
      app.kubernetes.io/instance: pocketid
  template:
    metadata:
      labels:
        helm.sh/chart: pocketid-0.1.30
        app.kubernetes.io/name: pocketid
        app.kubernetes.io/instance: pocketid
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: pocketid
      securityContext:
        {}
      containers:
        - name: pocketid
          image: "ghcr.io/pocket-id/pocket-id:v2.7.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 1411
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: 1411
          volumeMounts:
            - mountPath: /app/data
              name: pvc-pocketid
              readOnly: false
      volumes:
        - name: pvc-pocketid
          persistentVolumeClaim:
            claimName: pocketid
---
# Source: homelab/charts/pocketid/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocketid
  labels:
    helm.sh/chart: pocketid-0.1.30
    app.kubernetes.io/name: pocketid
    app.kubernetes.io/instance: pocketid
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "pocketid.kyledev.co"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - group: ""
        kind: Service
        name: pocketid
        port: 1411
        weight: 1
---
# Source: homelab/charts/pocketid/templates/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: pocketid
  labels:
    helm.sh/chart: pocketid-0.1.30
    app.kubernetes.io/name: pocketid
    app.kubernetes.io/instance: pocketid
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: pocketid
  extAuth:
    grpc:
      backendRefs:
      - group: ""
        kind: Service
        name: homelab-envoy-proxy-bouncer
        namespace: crowdsec
        port: 8080
