apps/pocketid/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: pocketid
  namespace: pocketid
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: pocketid
  extAuth:
    grpc:
      backendRefs:
        - group: ""
          kind: Service
          name: homelab-envoy-proxy-bouncer
          port: 8080
          namespace: envoy-gateway-system
